--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,9 @@ dependencies {
   compile 'fm.jiecao:jiecaovideoplayer:4.8.2'
   compile 'com.github.bumptech.glide:glide:3.5.2'
   compile 'es.voghdev.pdfviewpager:library:1.0.1'
+
+  compile 'com.squareup.okhttp3:okhttp:3.3.1'
+  compile 'com.squareup.okio:okio:1.8.0'
+  compile 'com.lzy.net:okgo:2.1.1'
+  compile 'com.lzy.net:okrx:0.1.1'
 }
